# generate-long-duration-jwt

./: .gitignore  Cargo.toml  LICENSE  README.md  jreleaser.yml  test_output.json
.github/workflows/: check-and-lint.yaml  early-access.yml  jreleaser.yml  release.yml  reusable-build.yml
src/: main.rs
tests/: main_integration_tests.rs
